<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/etGoalTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/goal_field_title" />

    <EditText
        android:id="@+id/etGoalObjetivo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/goal_field_target"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/etGoalActual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/goal_field_current"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/etGoalFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/goal_field_deadline"
        android:inputType="date" />

</LinearLayout>
